# BatmanInfer

./: CMakeLists.txt  README.md  main.cpp
includes/: status_code.hpp
includes/data/: Tensor.hpp
includes/onnx_conv/: OnnxUtils.hpp
includes/others/: utils.hpp
includes/runtime/: ir.h  runtime_attr.hpp  runtime_datatype.hpp  runtime_ir.hpp  runtime_op.hpp  runtime_operand.hpp  runtime_parameter.hpp
source/: Tensor.cpp  ir.cpp  runtime_attr.cpp  runtime_ir.cpp  runtime_op.cpp
source/onnx_conv/: OnnxUtils.cpp
source/others/: utils.cpp
test/: tensor_get_values.cpp  test_create_tensor.cpp  test_ir.cpp  test_onnx.cpp  test_operator.cpp
